Remove perm size jvm arguments
Signed-off-by: utzcoz <utzcoz@outlook.com>